--- a/eventDetails.html
+++ b/eventDetails.html
@@ -42,8 +42,8 @@
                 </a>
                 <!-- navigation bar -->
                 <nav class="navlink_area">
-                    <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
-                        <li><a href="lookbook.html" class="navlink">LOOKBOOK</a></li>
+                     <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
+                        <li><a href="lookbook.html" class="navlink">At A Glance</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
                         <li><a href="tradeshows.html" class="navlink">TRADESHOWS</a></li>
                         <li><a href="becomeACustomer.html" class="navlink">BECOME A CUSTOMER</a></li>
@@ -197,7 +197,7 @@
                 </div>
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
-                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to buy</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to Buy</a>
                 <a href="tradeshows.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
                 <a href="aboutUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
                 <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events &
