--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- navigation bar -->
                 <nav class="navlink_area">
                     <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
-                        <li><a href="lookbook.html" class="navlink">LOOKBOOK</a></li>
+                        <li><a href="lookbook.html" class="navlink">At A Glance</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
                         <li><a href="tradeshows.html" class="navlink">TRADESHOWS</a></li>
                         <li><a href="becomeACustomer.html" class="navlink">BECOME A CUSTOMER</a></li>
@@ -77,20 +77,26 @@
 
     <!-- =======================hero section start======================= -->
     <section class="hero_section vh-100">
-        <div class="container">
-            <h1 class="display-2 fw-normal text-white fm-didact text-center" style="padding-top: 200px;">Design Your
-                Space, <br> Define Your <span style="color: #9CB31A;">Style</span></h1>
-            <p class="text-center fs-5 text-white fw-normal mt-3">Create comfort that reflects your unique rhythm. <br>
-                Modern living starts with thoughtful design.</p>
-            <a href="#"
-                class="d-flex mt-4 justify-content-center align-items-center text-white gap-3 rounded-pill py-1 ps-3 pe-2 mx-auto bg-blur"
-                style="border: 0.86px solid #FFFFFF99; width: fit-content;">
-                <span>Shop More</span>
-                <span
-                    class="d-flex justify-content-center align-items-center rounded-circle flex-shrink-0 bg-accentGreen p-2"
-                    style="height: 41px ; width: 41px;"><img class="w-100" src="assets/images/rightArrow.svg"
-                        alt=""></span>
-            </a>
+        <div class="container h-100">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div>
+                    <h1 class="display-2 fw-normal text-white fm-didact text-center">Design Your
+                        Space, <br> Define Your <span style="color: #9CB31A;">Style</span></h1>
+                    <p class="text-center fs-5 text-white fw-normal mt-3">Create comfort that reflects your unique
+                        taste. <br>
+                        Modern living starts with thoughtful design.</p>
+                    <a href="#"
+                        class="d-flex mt-4 justify-content-center align-items-center text-white gap-3 rounded-pill py-1 ps-3 pe-2 mx-auto bg-blur"
+                        style="border: 0.86px solid #FFFFFF99; width: fit-content;">
+                        <span>Shop More</span>
+                        <span
+                            class="d-flex justify-content-center align-items-center rounded-circle flex-shrink-0 bg-accentGreen p-2"
+                            style="height: 41px ; width: 41px;"><img class="w-100" src="assets/images/rightArrow.svg"
+                                alt=""></span>
+                    </a>
+                </div>
+            </div>
+
         </div>
     </section>
     <!-- =======================hero section end======================= -->
@@ -112,23 +118,23 @@
                     </div>
                     <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Living Room</h1>
                     <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a welcoming and stylish living
-                        space with our range of sofas, armchairs, and coffee tables.</p>
+                        space with our collection of living room furniture.</p>
                 </div>
                 <div class="col-lg-4">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/diningRoom.png" alt="Dining Room">
                     </div>
                     <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Dining Room</h1>
-                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Dine in style with our exquisite dining
-                        tables, chairs, and sideboards.</p>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Discover our range of stylish dining
+                        tables, chairs, and sideboards for an elegant dining experience.</p>
                 </div>
                 <div class="col-lg-4">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/bedRoom.png" alt="Bed Room">
                     </div>
-                    <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">BedRoom</h1>
-                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Transform your bedroom into a sanctuary
-                        with our luxurious beds, wardrobes, and bedside tables.</p>
+                    <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Bedroom</h1>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a serene sanctuary with our
+                        luxurious collection of beds, dressers, and bedside tables, crafted for comfort and style.</p>
                 </div>
             </div>
         </div>
@@ -141,10 +147,10 @@
             <div class="row g-lg-5 g-4">
                 <div class="col-xl-8 col-lg-7">
                     <div class="h-100 w-100 pe-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
-                        <h1 class="fw-normal fs-2 fm-forum text-dark">Modern Living</h1>
-                        <p class="fw-normal fs-6 fm-lato text-dark">Transform your living space into a sanctuary of
-                            contemporary elegance. Our curated collection blends cutting-edge design with uncompromising
-                            comfort, creating environments that inspire connection and relaxation.</p>
+                        <h1 class="fw-normal fs-2 fm-forum text-dark">Modern living with timeless designs</h1>
+                        <p class="fw-normal fs-6 fm-lato text-dark">Elevate your living space into a haven of modern
+                            sophistication. Our thoughtfully curated collection combines innovative design with
+                            exceptional comfort, crafting interiors that foster both connection and tranquility.</p>
                         <button class="btn text-white rounded-3 fw-bold fs-6 " style="background: #2D1817;">
                             Shop Now
                         </button>
@@ -175,9 +181,9 @@
                 <div class="col-xl-8 col-lg-7">
                     <div class="h-100 w-100 ps-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
                         <h1 class="fw-normal fs-2 fm-forum text-dark">Restful Retreat</h1>
-                        <p class="fw-normal fs-6 fm-lato text-dark">Design your perfect sanctuary with bedroom furniture
-                            that prioritizes both luxury and wellness. Every element is thoughtfully crafted to promote
-                            deep rest and rejuvenation in your personal haven.</p>
+                        <p class="fw-normal fs-6 fm-lato text-dark">Create your perfect retreat with bedroom furniture
+                            that combines luxury and comfort. Each piece is designed to support restful sleep and
+                            rejuvenation, turning your space into a true personal sanctuary.</p>
                         <button class="btn text-white rounded-3 fw-bold fs-6 " style="background: #2D1817;">
                             Shop Now
                         </button>
@@ -237,10 +243,10 @@
                 <div class="col-xl-6">
                     <h1 class="fs-2 fw-normal text-dark  fm-forum lh-base">Elevate Your Space with Uncompromising
                         Quality</h1>
-                    <p class="fw-normal fs-6 fm-lato text-dark mb-4 lh-base">Experience the epitome of furniture
-                        quality. Our products are meticulously crafted with an unwavering commitment to excellence. From
-                        the finest materials to expert craftsmanship, each piece embodies durability, comfort, and
-                        timeless style. Elevate your space with the assurance of exceptional quality and lasting beauty
+                    <p class="fw-normal fs-6 fm-lato text-dark mb-4 lh-base">Discover the pinnacle of furniture
+                        craftsmanship. Every piece is thoughtfully made with premium materials and expert attention to
+                        detail, ensuring unmatched durability, comfort, and timeless elegance. Enhance your space with
+                        the confidence of enduring quality and refined style.
                     </p>
                     <ul class="mb-4 ps-0">
                         <li class="mb-2 d-flex align-items-center justify-content-start gap-2"><img
@@ -251,7 +257,7 @@
                             Last for Generations</li>
                         <li class="mb-2 d-flex align-items-center justify-content-start gap-2"><img
                                 style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Loved by
-                            Customers Worldwide</li>
+                            Customers Nationwide</li>
                         <li class="mb-2 d-flex align-items-center justify-content-start gap-2"><img
                                 style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Superior
                             Materials</li>
@@ -279,7 +285,6 @@
                                     <p class=" fw-medium mb-0" style="font-size: 12px;  color: #A6A6A6;">Furniture
                                         Craftsmanship</p>
                                 </div>
-                                <img style="height: 40px; width: 40px;" src="assets/images/messageIcon.svg" alt="Icon">
                             </div>
                         </div>
                         <div class="effectmark d-none d-md-block position-absolute top-50  translate-middle-y"
@@ -307,18 +312,21 @@
     <section class="py-5">
         <div class="">
             <h1 style="border-bottom: 1px solid  #E5E5EA"
-                class="fs-2 fw-normal text-dark mb-5 pb-3  fm-forum lh-base text-center">Upcoming Trade Show - 2025</h1>
-            <div class="d-flex justify-content-center align-items-center gap-sm-4 gap-1 px-2">
-                <div class="upcommingTradeLogoBox" style="max-width: 245px;">
-                    <img src="assets/images/dallasMarketLogo.png" alt="">
-                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">June 18 - 24th, 2025 WTC 6262
-                        Dallas Market Center</p>
-                </div>
-                <div class="separatorBorder"></div>
-                <div class="upcommingTradeLogoBox pt-4" style="max-width: 209px;">
-                    <img class="mb-1" src="assets/images/hPMKT_Logo.png" alt="">
-                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">October 25 - 29th, 2025
-                        Plaza Suites 1-517</p>
+                class="fs-2 fw-normal text-dark mb-5 pb-3  fm-forum lh-base text-center">Upcoming Trade Shows</h1>
+            <div class="container">
+                <div class="d-flex justify-content-center align-items-center gap-sm-4 gap-1 px-2">
+                    <div class="upcommingTradeLogoBox pt-2" style="max-width: 209px;">
+                        <img class="mb-1" src="assets/images/hPMKT_Logo.png" alt="">
+                        <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center pt-4">Oct 25 - 29th, 2025 <br>
+                            Plaza Suites 1-517</p>
+                    </div>
+                    <div class="separatorBorder"></div>
+                    <div class="upcommingTradeLogoBox" style="max-width: 245px;">
+                        <img src="assets/images/dallasMarketLogo.png" alt="">
+                        <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">Jan 07 – 13, 2026 <br>
+                            WTC 6262 <br>
+                            Dallas Market Center</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -335,10 +343,11 @@
 
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
-                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to buy</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to Buy</a>
                 <a href="tradeshows.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
                 <a href="aboutUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
-                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events & Promotions</a>
+                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events &
+                    Promotions</a>
                 <a href="contactUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Contact Us</a>
             </div>
             <!-- copywrite start -->
