--- a/lookbook.html
+++ b/lookbook.html
@@ -42,8 +42,8 @@
                 </a>
                 <!-- navigation bar -->
                 <nav class="navlink_area">
-                    <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
-                        <li><a href="lookbook.html" class="navlink">LOOKBOOK</a></li>
+                     <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
+                        <li><a href="lookbook.html" class="navlink">At A Glance</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
                         <li><a href="tradeshows.html" class="navlink">TRADESHOWS</a></li>
                         <li><a href="becomeACustomer.html" class="navlink">BECOME A CUSTOMER</a></li>
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="d-flex justify-content-center align-items-center flex-nowrap" style="padding-top: 180px;">
                 <div class="borderline w-100"></div>
-                <h1 class="flex-shrink-0 fm-forum mb-0 fw-normal text-dark lookbookherotitle">Lookbook</h1>
+                <h1 class="flex-shrink-0 fm-forum mb-0 fw-normal text-dark lookbookherotitle">At a Glance</h1>
                 <div class="borderline w-100"></div>
             </div>
             <p class="fw-normal fs-6 text-dark text-center fm-lato" style="margin-top: -15px;">Inspiration for every
@@ -95,54 +95,54 @@
     <section class="py-5">
         <div class="container">
             <div class="row g-4">
-                <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery1.png" alt="Gallery Image 1">
+                <div class="col-lg-4 col-xl-5 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook1.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery2.png" alt="Gallery Image 2">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook2.png" alt="Gallery Image 2">
                     </div>
                 </div>
-                <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery3.png" alt="Gallery Image 3">
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook3.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery4.png" alt="Gallery Image 4">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook4.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery5.png" alt="Gallery Image 4">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook5.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-5 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook6.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery1.png" alt="Gallery Image 1">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook7.png" alt="Gallery Image 2">
                     </div>
                 </div>
-                <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery2.png" alt="Gallery Image 2">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery3.png" alt="Gallery Image 3">
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook8.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery4.png" alt="Gallery Image 4">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook9.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery5.png" alt="Gallery Image 4">
+                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook10.png" alt="Gallery Image 4">
                     </div>
                 </div>
             </div>
@@ -172,26 +172,21 @@
                         <img class="w-100 h-100" loading="lazy" src="assets/images/livingRoom.png" alt="Living Room">
                     </div>
                     <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Living Room</h1>
-                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a welcoming and stylish living
-                        space with our range of sofas, armchairs, and coffee tables.</p>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a welcoming and stylish living space with our collection of living room furniture.</p>
                 </div>
                 <div class="col-lg-4">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/diningRoom.png" alt="Dining Room">
                     </div>
                     <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Dining Room</h1>
-                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Dine in style with our exquisite
-                        dining
-                        tables, chairs, and sideboards.</p>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Discover our range of stylish dining tables, chairs, and sideboards for an elegant dining experience.</p>
                 </div>
                 <div class="col-lg-4">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/bedRoom.png" alt="Bed Room">
                     </div>
-                    <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">BedRoom</h1>
-                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Transform your bedroom into a
-                        sanctuary
-                        with our luxurious beds, wardrobes, and bedside tables.</p>
+                    <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Bedroom</h1>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a serene sanctuary with our luxurious collection of beds, dressers, and bedside tables, crafted for comfort and style.</p>
                 </div>
             </div>
         </div>
@@ -209,7 +204,7 @@
 
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
-                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to buy</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to Buy</a>
                 <a href="tradeshows.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
                 <a href="aboutUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
                 <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events &
